# OpenGL_Workbench_Lighting

./: CMakeLists.txt  CMakePresets.json  Main.cpp  Mesh.cpp  Model.cpp  Readme.md  Shader.cpp  TextureManager.cpp  vcpkg.json
headers/: Model.hpp  PointLight.hpp  Texture.hpp  TextureManager.hpp  Vertex.hpp
include/: Camera.hpp  FreeLookCamera.hpp  Mesh.hpp  Model.hpp  PointLight.hpp  TextureManager.hpp  Vertex.hpp
resources/shaders/: frag_lit.glsl  vert_lit.glsl
shaders/: frag_lit.glsl
src/: Camera.cpp  Mesh.cpp  Model.cpp  TextureManager.cpp
